fixed overflow issue

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -603,9 +603,7 @@ a:hover {
         overflow: hidden;
     }
 
-    #projCard{
-        overflow: auto;
-    }
+
 
     .bo {
         height: 70vh;
